--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^5.0.0-beta.1",
-		"@astrojs/check": "^0.9.3",
-		"typescript": "^5.6.2"
+		"astro": "5.0.0-beta.1",
+		"@astrojs/check": "0.9.3",
+		"typescript": "5.6.2"
 	}
 }
