feat: Update launch command in .vscode/launch.json
- Updated the "command" property in .vscode/launch.json to remove the "--host 127.0.0.1" argument, resulting in a simplified command.
- This change was made to improve the launch configuration for the server.

feat: Add tailwindCSS experimental classRegex

- Added new entries to the "tailwindCSS.experimental.classRegex" array in .vscode/settings.json.
- These entries define regular expressions for matching custom class names used with `cva()` and `cx()` functions.
- The purpose of this change is to enhance support for custom class names when using Tailwind CSS.

feat: Update astro.config.ts

- Imported react and tailwind integrations from "@astrojs/react" and "@astrojs/tailwind" respectively in astro.config.ts.
- Added these integrations to the "integrations" array in defineConfig().
- Set applyBaseStyles option of tailwind integration to false.
- This change was made to update the Astro configuration and include React and Tailwind CSS integrations.

chore: Update dependencies in package.json

- Updated versions of various dependencies including "@astrojs/react", "@astrojs/tailwind", "react", "react-dom", etc., in package.json.
- This change was made to keep dependencies up-to-date.

feat: Add components.json file

- Created a new file components.json with initial content defining aliases for component paths.
- The purpose of this file is to provide convenient aliases for importing components, utils, hooks, etc., within the project.

feat: Add Button component

- Created a new file src/components/ui/button.tsx containing a Button component implementation.
- The Button component supports different variants such as default, destructive, outline, secondary, ghost, and link.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,16 @@
 		"ngClass",
 		"class:list"
 	],
+	"tailwindCSS.experimental.classRegex": [
+		[
+			"cva\\(([^)]*)\\)",
+			"[\"'`]([^\"'`]*).*?[\"'`]"
+		],
+		[
+			"cx\\(([^)]*)\\)",
+			"(?:'|\"|`)([^']*)(?:'|\"|`)"
+		]
+	],
 	"debug.allowBreakpointsEverywhere": true,
 	"editor.defaultFormatter": "biomejs.biome",
 	"files.trimTrailingWhitespace": true,
