--- a/package.json
+++ b/package.json
@@ -10,27 +10,30 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/cloudflare": "12.0.0-beta.0",
+		"@astrojs/db": "0.14.1",
 		"@astrojs/react": "3.6.2",
 		"@astrojs/tailwind": "5.1.1",
-		"@fontsource/geist-mono": "^5.1.0",
-		"@fontsource/geist-sans": "^5.1.0",
+		"@fontsource/geist-mono": "5.1.0",
+		"@fontsource/geist-sans": "5.1.0",
 		"@radix-ui/react-icons": "1.3.0",
 		"@radix-ui/react-slot": "1.1.0",
 		"astro": "5.0.0-beta.1",
+		"lucia-adapter-astrodb": "0.2.0",
 		"lucide-react": "0.445.0",
 		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"tailwindcss-animate": "1.0.7"
+		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
 		"@astrojs/check": "0.9.3",
 		"@types/react": "18.3.8",
 		"@types/react-dom": "18.3.0",
-		"tailwindcss": "3.4.12",
-		"tailwind-merge": "2.5.2",
-		"fluid-tailwind": "1.0.3",
-		"typescript": "5.6.2",
 		"class-variance-authority": "0.7.0",
-		"clsx": "2.1.1"
+		"clsx": "2.1.1",
+		"fluid-tailwind": "1.0.3",
+		"tailwind-merge": "2.5.2",
+		"tailwindcss": "3.4.12",
+		"tailwindcss-animate": "1.0.7",
+		"typescript": "5.6.2"
 	}
 }
