--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
 		"@astrojs/tailwind": "5.1.1",
 		"@fontsource/geist-mono": "5.1.0",
 		"@fontsource/geist-sans": "5.1.0",
+		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
 		"@radix-ui/react-icons": "1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "1.1.0",
 		"astro": "5.0.0-beta.1",
 		"lucia-adapter-astrodb": "0.2.0",
