--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
 		"@astrojs/tailwind": "5.1.1",
 		"@fontsource/geist-mono": "5.1.0",
 		"@fontsource/geist-sans": "5.1.0",
-		"@radix-ui/react-dialog": "^1.1.1",
-		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-dialog": "1.1.1",
+		"@radix-ui/react-dropdown-menu": "2.1.1",
 		"@radix-ui/react-icons": "1.3.0",
-		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@radix-ui/react-tabs": "^1.1.0",
-		"@radix-ui/react-tooltip": "^1.1.2",
+		"@radix-ui/react-label": "2.1.0",
+		"@radix-ui/react-separator": "1.1.0",
+		"@radix-ui/react-slot": "1.1.0",
+		"@radix-ui/react-tabs": "1.1.0",
+		"@radix-ui/react-tooltip": "1.1.2",
 		"astro": "5.0.0-beta.1",
 		"lucia-adapter-astrodb": "0.2.0",
 		"lucide-react": "0.445.0",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"recharts": "2.13.0-alpha.5"
 	},
 	"devDependencies": {
 		"@types/react": "18.3.8",
