--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"vaul": "^1.0.0"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.15",
 		"@types/react": "18.3.8",
 		"@types/react-dom": "18.3.0",
 		"class-variance-authority": "0.7.0",
