--- a/package.json
+++ b/package.json
@@ -16,25 +16,47 @@
 		"@astrojs/tailwind": "5.1.1",
 		"@fontsource/geist-mono": "5.1.0",
 		"@fontsource/geist-sans": "5.1.0",
+		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-accordion": "^1.2.0",
+		"@radix-ui/react-alert-dialog": "^1.1.1",
+		"@radix-ui/react-aspect-ratio": "^1.1.0",
 		"@radix-ui/react-avatar": "^1.1.0",
+		"@radix-ui/react-checkbox": "^1.1.1",
+		"@radix-ui/react-collapsible": "^1.1.0",
+		"@radix-ui/react-context-menu": "^2.2.1",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "2.1.1",
+		"@radix-ui/react-hover-card": "^1.1.1",
 		"@radix-ui/react-icons": "1.3.0",
-		"@radix-ui/react-label": "2.1.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-menubar": "^1.1.1",
+		"@radix-ui/react-navigation-menu": "^1.2.0",
 		"@radix-ui/react-popover": "^1.1.1",
+		"@radix-ui/react-progress": "^1.1.0",
+		"@radix-ui/react-radio-group": "^1.2.0",
 		"@radix-ui/react-scroll-area": "^1.1.0",
+		"@radix-ui/react-select": "^2.1.1",
 		"@radix-ui/react-separator": "1.1.0",
-		"@radix-ui/react-slot": "1.1.0",
+		"@radix-ui/react-slider": "^1.2.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-tabs": "1.1.0",
+		"@radix-ui/react-toast": "^1.2.1",
+		"@radix-ui/react-toggle": "^1.1.0",
+		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "1.1.2",
 		"astro": "5.0.0-beta.1",
 		"cmdk": "1.0.0",
+		"date-fns": "^4.1.0",
 		"lucia-adapter-astrodb": "0.2.0",
 		"lucide-react": "0.445.0",
 		"react": "18.3.1",
+		"react-day-picker": "8.10.1",
 		"react-dom": "18.3.1",
+		"react-hook-form": "^7.53.0",
 		"recharts": "2.13.0-alpha.5",
-		"vaul": "^1.0.0"
+		"vaul": "^1.0.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.15",
