--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 		"@astrojs/tailwind": "5.1.1",
 		"@fontsource/geist-mono": "5.1.0",
 		"@fontsource/geist-sans": "5.1.0",
+		"@fullcalendar/core": "^6.1.15",
+		"@fullcalendar/daygrid": "^6.1.15",
+		"@fullcalendar/react": "^6.1.15",
 		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
@@ -55,6 +58,7 @@
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.53.0",
 		"recharts": "2.13.0-alpha.5",
+		"sonner": "^1.5.0",
 		"vaul": "^1.0.0",
 		"zod": "^3.23.8"
 	},
