--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@fullcalendar/daygrid": "6.1.15",
 		"@fullcalendar/react": "6.1.15",
 		"@hookform/resolvers": "3.9.1",
+		"@libsql/kysely-libsql": "^0.4.1",
 		"@radix-ui/react-accordion": "1.2.1",
 		"@radix-ui/react-alert-dialog": "1.1.2",
 		"@radix-ui/react-aspect-ratio": "1.1.0",
@@ -49,9 +50,9 @@
 		"@radix-ui/react-toggle-group": "1.1.0",
 		"@radix-ui/react-tooltip": "1.1.4",
 		"astro": "5.0.0-beta.1",
+		"better-auth": "^0.8.5",
 		"cmdk": "1.0.4",
 		"date-fns": "4.1.0",
-		"lucia-adapter-astrodb": "0.2.0",
 		"lucide-react": "0.460.0",
 		"react": "18.3.1",
 		"react-day-picker": "9.3.0",
