--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"start": "astro dev",
 		"build": "astro check && astro build",
 		"preview": "astro preview",
+		"push": "astro db push --remote",
+		"reset": "astro db reset",
 		"astro": "astro"
 	},
 	"dependencies": {
@@ -24,12 +26,12 @@
 		"@radix-ui/react-accordion": "1.2.1",
 		"@radix-ui/react-alert-dialog": "1.1.2",
 		"@radix-ui/react-aspect-ratio": "1.1.0",
-		"@radix-ui/react-avatar": "1.1.1",
+		"@radix-ui/react-avatar": "^1.1.1",
 		"@radix-ui/react-checkbox": "1.1.2",
-		"@radix-ui/react-collapsible": "1.1.1",
+		"@radix-ui/react-collapsible": "^1.1.1",
 		"@radix-ui/react-context-menu": "2.2.2",
-		"@radix-ui/react-dialog": "1.1.2",
-		"@radix-ui/react-dropdown-menu": "2.1.2",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-hover-card": "1.1.2",
 		"@radix-ui/react-icons": "1.3.2",
 		"@radix-ui/react-label": "2.1.0",
@@ -40,20 +42,20 @@
 		"@radix-ui/react-radio-group": "1.2.1",
 		"@radix-ui/react-scroll-area": "1.2.1",
 		"@radix-ui/react-select": "2.1.2",
-		"@radix-ui/react-separator": "1.1.0",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slider": "1.2.1",
-		"@radix-ui/react-slot": "1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-switch": "1.1.1",
 		"@radix-ui/react-tabs": "1.1.1",
 		"@radix-ui/react-toast": "1.2.2",
 		"@radix-ui/react-toggle": "1.1.0",
 		"@radix-ui/react-toggle-group": "1.1.0",
-		"@radix-ui/react-tooltip": "1.1.4",
+		"@radix-ui/react-tooltip": "^1.1.4",
 		"astro": "5.0.0-beta.1",
 		"better-auth": "^0.8.5",
 		"cmdk": "1.0.4",
 		"date-fns": "4.1.0",
-		"lucide-react": "0.460.0",
+		"lucide-react": "^0.460.0",
 		"react": "18.3.1",
 		"react-day-picker": "9.3.0",
 		"react-dom": "18.3.1",
@@ -67,7 +69,7 @@
 		"@tailwindcss/typography": "0.5.15",
 		"@types/react": "18.3.12",
 		"@types/react-dom": "18.3.1",
-		"class-variance-authority": "0.7.0",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "2.1.1",
 		"fluid-tailwind": "1.0.4",
 		"tailwind-merge": "2.5.4",
