Update launch config and reorganize actions
- Added `--host 127.0.0.1` to the launch command.
- Moved user-related action files into an 'auth' folder for better organization.
- Updated import paths in the index file to reflect new locations.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"command": "bun x astro dev",
+			"command": "bun x astro dev --host 127.0.0.1",
 			"name": "server",
 			"request": "launch",
 			"type": "node-terminal",
