--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"react-dom": "18.3.1",
 		"react-hook-form": "7.54.2",
 		"recharts": "2.15.0",
+		"resend": "4.0.1",
 		"sonner": "1.7.1",
 		"vaul": "1.1.2",
 		"zod": "3.24.1"
