--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"@radix-ui/react-dropdown-menu": "2.1.4",
 		"@radix-ui/react-hover-card": "1.1.4",
 		"@radix-ui/react-icons": "1.3.2",
-		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-label": "2.1.1",
 		"@radix-ui/react-menubar": "1.1.4",
 		"@radix-ui/react-navigation-menu": "1.2.3",
 		"@radix-ui/react-popover": "1.1.4",
@@ -44,7 +44,7 @@
 		"@radix-ui/react-select": "2.1.4",
 		"@radix-ui/react-separator": "1.1.1",
 		"@radix-ui/react-slider": "1.2.2",
-		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-slot": "1.1.1",
 		"@radix-ui/react-switch": "1.1.2",
 		"@radix-ui/react-tabs": "1.1.2",
 		"@radix-ui/react-toast": "1.2.4",
@@ -60,6 +60,7 @@
 		"react-day-picker": "9.4.4",
 		"react-dom": "18.3.1",
 		"react-hook-form": "7.54.2",
+		"react-icons": "5.4.0",
 		"recharts": "2.15.0",
 		"resend": "4.0.1",
 		"sonner": "1.7.1",
