--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@radix-ui/react-toggle": "1.1.1",
 		"@radix-ui/react-toggle-group": "1.1.1",
 		"@radix-ui/react-tooltip": "1.1.6",
+		"@tursodatabase/api": "1.9.0",
 		"astro": "5.1.1",
 		"better-auth": "1.1.4",
 		"cmdk": "1.0.4",
