--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
 		"@fontsource/geist-sans": "5.1.0",
 		"@fullcalendar/core": "6.1.15",
 		"@fullcalendar/daygrid": "6.1.15",
+		"@fullcalendar/interaction": "^6.1.15",
+		"@fullcalendar/list": "^6.1.15",
 		"@fullcalendar/react": "6.1.15",
+		"@fullcalendar/timegrid": "^6.1.15",
 		"@hookform/resolvers": "3.9.1",
 		"@libsql/kysely-libsql": "0.4.1",
 		"@radix-ui/react-accordion": "1.2.2",
