--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
 		"@fontsource/geist-sans": "5.1.0",
 		"@fullcalendar/core": "6.1.15",
 		"@fullcalendar/daygrid": "6.1.15",
-		"@fullcalendar/interaction": "^6.1.15",
-		"@fullcalendar/list": "^6.1.15",
+		"@fullcalendar/interaction": "6.1.15",
+		"@fullcalendar/list": "6.1.15",
 		"@fullcalendar/react": "6.1.15",
-		"@fullcalendar/timegrid": "^6.1.15",
+		"@fullcalendar/resource": "6.1.15",
+		"@fullcalendar/resource-timegrid": "6.1.15",
+		"@fullcalendar/resource-timeline": "6.1.15",
+		"@fullcalendar/timegrid": "6.1.15",
 		"@hookform/resolvers": "3.9.1",
 		"@libsql/kysely-libsql": "0.4.1",
 		"@radix-ui/react-accordion": "1.2.2",
@@ -56,6 +59,7 @@
 		"@radix-ui/react-toggle": "1.1.1",
 		"@radix-ui/react-toggle-group": "1.1.1",
 		"@radix-ui/react-tooltip": "1.1.6",
+		"@tanstack/react-table": "8.20.6",
 		"@tursodatabase/api": "1.9.0",
 		"astro": "5.1.1",
 		"better-auth": "1.1.8",
