--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@radix-ui/react-tooltip": "1.1.6",
 		"@tanstack/react-table": "8.20.6",
 		"@tursodatabase/api": "1.9.0",
+		"@xyflow/react": "12.3.6",
 		"astro": "5.1.1",
 		"better-auth": "1.1.8",
 		"cmdk": "1.0.4",
