Update environment example with new config options
- Added APP_ORGANIZATION variable for organization name
- Cleared BETTER_AUTH_SECRET for security reasons
- Introduced new variables for R2 configuration and Resend API key
- Updated comments to reflect changes in production URL setup

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
-# Turso Database Configuration
+APP_ORGANIZATION=organization-name
+
 ASTRO_DB_REMOTE_URL=libsql://your-database-name.turso.io
 ASTRO_DB_APP_TOKEN=your-turso-auth-token
 
-# Better Auth Configuration
-BETTER_AUTH_SECRET=your-32-character-secret-key
+BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:4321
 
-# Note: In production, change BETTER_AUTH_URL to your production URL
-# BETTER_AUTH_URL=https://your-production-domain.com
+RESEND_API_KEY=
+
+R2_ACCOUNT_ID=
+R2_ACCESS_KEY_ID=
+R2_SECRET_ACCESS_KEY=
+R2_BUCKET_NAME=astro-shadcn-turso-dashboard
+R2_PUBLIC_URL=https://astro-shadcn-turso-dashboard.domain.com
