--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "0.9.4",
-		"@astrojs/cloudflare": "12.1.0",
-		"@astrojs/db": "0.14.5",
-		"@astrojs/react": "4.1.2",
-		"@astrojs/tailwind": "5.1.4",
-		"@aws-sdk/client-s3": "3.717.0",
-		"@fontsource/geist-mono": "5.1.1",
-		"@fontsource/geist-sans": "5.1.0",
+		"@astrojs/cloudflare": "12.2.3",
+		"@astrojs/db": "0.14.8",
+		"@astrojs/react": "4.2.1",
+		"@astrojs/tailwind": "6.0.0",
+		"@aws-sdk/client-s3": "3.758.0",
+		"@fontsource/geist-mono": "5.2.5",
+		"@fontsource/geist-sans": "5.2.5",
 		"@fullcalendar/core": "6.1.15",
 		"@fullcalendar/daygrid": "6.1.15",
 		"@fullcalendar/interaction": "6.1.15",
@@ -29,67 +29,68 @@
 		"@fullcalendar/resource-timegrid": "6.1.15",
 		"@fullcalendar/resource-timeline": "6.1.15",
 		"@fullcalendar/timegrid": "6.1.15",
-		"@hookform/resolvers": "3.9.1",
+		"@hookform/resolvers": "4.1.3",
 		"@libsql/kysely-libsql": "0.4.1",
-		"@radix-ui/react-accordion": "1.2.2",
-		"@radix-ui/react-alert-dialog": "1.1.4",
-		"@radix-ui/react-aspect-ratio": "1.1.1",
-		"@radix-ui/react-avatar": "1.1.2",
-		"@radix-ui/react-checkbox": "1.1.3",
-		"@radix-ui/react-collapsible": "1.1.2",
-		"@radix-ui/react-context-menu": "2.2.4",
-		"@radix-ui/react-dialog": "1.1.4",
-		"@radix-ui/react-dropdown-menu": "2.1.4",
-		"@radix-ui/react-hover-card": "1.1.4",
+		"@radix-ui/react-accordion": "1.2.3",
+		"@radix-ui/react-alert-dialog": "1.1.6",
+		"@radix-ui/react-aspect-ratio": "1.1.2",
+		"@radix-ui/react-avatar": "1.1.3",
+		"@radix-ui/react-checkbox": "1.1.4",
+		"@radix-ui/react-collapsible": "1.1.3",
+		"@radix-ui/react-context-menu": "2.2.6",
+		"@radix-ui/react-dialog": "1.1.6",
+		"@radix-ui/react-dropdown-menu": "2.1.6",
+		"@radix-ui/react-hover-card": "1.1.6",
 		"@radix-ui/react-icons": "1.3.2",
-		"@radix-ui/react-label": "2.1.1",
-		"@radix-ui/react-menubar": "1.1.4",
-		"@radix-ui/react-navigation-menu": "1.2.3",
-		"@radix-ui/react-popover": "1.1.4",
-		"@radix-ui/react-progress": "1.1.1",
-		"@radix-ui/react-radio-group": "1.2.2",
-		"@radix-ui/react-scroll-area": "1.2.2",
-		"@radix-ui/react-select": "2.1.4",
-		"@radix-ui/react-separator": "1.1.1",
-		"@radix-ui/react-slider": "1.2.2",
-		"@radix-ui/react-slot": "1.1.1",
-		"@radix-ui/react-switch": "1.1.2",
-		"@radix-ui/react-tabs": "1.1.2",
-		"@radix-ui/react-toast": "1.2.4",
-		"@radix-ui/react-toggle": "1.1.1",
-		"@radix-ui/react-toggle-group": "1.1.1",
-		"@radix-ui/react-tooltip": "1.1.6",
-		"@tanstack/react-table": "8.20.6",
+		"@radix-ui/react-label": "2.1.2",
+		"@radix-ui/react-menubar": "1.1.6",
+		"@radix-ui/react-navigation-menu": "1.2.5",
+		"@radix-ui/react-popover": "1.1.6",
+		"@radix-ui/react-progress": "1.1.2",
+		"@radix-ui/react-radio-group": "1.2.3",
+		"@radix-ui/react-scroll-area": "1.2.3",
+		"@radix-ui/react-select": "2.1.6",
+		"@radix-ui/react-separator": "1.1.2",
+		"@radix-ui/react-slider": "1.2.3",
+		"@radix-ui/react-slot": "1.1.2",
+		"@radix-ui/react-switch": "1.1.3",
+		"@radix-ui/react-tabs": "1.1.3",
+		"@radix-ui/react-toast": "1.2.6",
+		"@radix-ui/react-toggle": "1.1.2",
+		"@radix-ui/react-toggle-group": "1.1.2",
+		"@radix-ui/react-tooltip": "1.1.8",
+		"@tailwindcss/vite": "4.0.10",
+		"@tanstack/react-table": "8.21.2",
 		"@tursodatabase/api": "1.9.0",
-		"@xyflow/react": "12.3.6",
-		"astro": "5.1.1",
-		"better-auth": "1.1.8",
+		"@xyflow/react": "12.4.4",
+		"astro": "5.4.2",
+		"better-auth": "1.2.3",
 		"canvas-confetti": "1.9.3",
 		"cmdk": "1.0.4",
 		"date-fns": "4.1.0",
-		"lucide-react": "0.469.0",
+		"lucide-react": "0.477.0",
 		"react": "19.0.0",
-		"react-day-picker": "9.5.0",
+		"react-day-picker": "9.5.1",
 		"react-dom": "19.0.0",
 		"react-hook-form": "7.54.2",
-		"react-icons": "5.4.0",
-		"recharts": "2.15.0",
-		"resend": "4.0.1",
-		"sonner": "1.7.1",
+		"react-icons": "5.5.0",
+		"recharts": "2.15.1",
+		"resend": "4.1.2",
+		"sonner": "2.0.1",
 		"vaul": "1.1.2",
-		"zod": "3.24.1",
-		"zustand": "5.0.2"
+		"zod": "3.24.2",
+		"zustand": "5.0.3"
 	},
 	"devDependencies": {
-		"@tailwindcss/typography": "0.5.15",
-		"@types/react": "19.0.2",
-		"@types/react-dom": "19.0.2",
+		"@tailwindcss/typography": "0.5.16",
+		"@types/react": "19.0.10",
+		"@types/react-dom": "19.0.4",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"fluid-tailwind": "1.0.4",
-		"tailwind-merge": "2.6.0",
-		"tailwindcss": "3.4.17",
+		"tailwind-merge": "3.0.2",
+		"tailwindcss": "4.0.10",
 		"tailwindcss-animate": "1.0.7",
-		"typescript": "5.7.2"
+		"typescript": "5.8.2"
 	}
 }
