--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"@radix-ui/react-checkbox": "1.1.4",
 		"@radix-ui/react-collapsible": "1.1.3",
 		"@radix-ui/react-context-menu": "2.2.6",
-		"@radix-ui/react-dialog": "1.1.6",
+		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "2.1.6",
 		"@radix-ui/react-hover-card": "1.1.6",
 		"@radix-ui/react-icons": "1.3.2",
@@ -52,7 +52,7 @@
 		"@radix-ui/react-select": "2.1.6",
 		"@radix-ui/react-separator": "1.1.2",
 		"@radix-ui/react-slider": "1.2.3",
-		"@radix-ui/react-slot": "1.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-switch": "1.1.3",
 		"@radix-ui/react-tabs": "1.1.3",
 		"@radix-ui/react-toast": "1.2.6",
@@ -68,15 +68,19 @@
 		"canvas-confetti": "1.9.3",
 		"cmdk": "1.0.4",
 		"date-fns": "4.1.0",
+		"embla-carousel-react": "^8.5.2",
+		"input-otp": "^1.4.2",
 		"lucide-react": "0.477.0",
+		"next-themes": "^0.4.4",
 		"react": "19.0.0",
 		"react-day-picker": "9.5.1",
 		"react-dom": "19.0.0",
 		"react-hook-form": "7.54.2",
 		"react-icons": "5.5.0",
+		"react-resizable-panels": "^2.1.7",
 		"recharts": "2.15.1",
 		"resend": "4.1.2",
-		"sonner": "2.0.1",
+		"sonner": "^2.0.1",
 		"vaul": "1.1.2",
 		"zod": "3.24.2",
 		"zustand": "5.0.3"
